[package]
name = "webtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] } # Adjust version as needed
tokio = { version = "1", features = ["full"] }
actix-rt = "2"
awc = "3"
rustls = "0.20"
tokio-rustls = "0.23"
webpki = "0.22"
rcgen = "0.9"
